--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="title">Tic - Tac - Toe</h1>
-    <div class="container"></div>
+    <div class="score"><h1 class="title">Tic - Tac - Toe</h1><button class='reset'>Reset</button></div>
+    <div class="container">
+        <div class="board">
+        </div>
+    </div>
 </body>
 </html>
